contrast fix
contrast fix

--- a/client/styles.css
+++ b/client/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #1e6f21;
+    background-color: #227225;
     color: white;
     padding: 15px;
     text-align: center;
@@ -16,7 +16,7 @@ header {
 }
 
 nav {
-    background-color: #348d37;
+    background-color: #369646;
     padding: 10px;
     text-align: center;
 }
